<?xml version="1.0"?>
<package>
  <name>additional_msgs</name>
  <version>1.0.0</version>
  <description>
    Here you can add messages you need by several ROS nodes. However,
    first check if you can reuse message types defined in common_msgs
    (http://wiki.ros.org/common_msgs).
  </description>

  <maintainer email="denise@vmars.tuwien.ac.at">Denise Ratasich</maintainer>
  <license>MIT</license>
  <author email="denise@vmars.tuwien.ac.at">Denise Ratasich</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
