<?xml version="1.0"?>
<package>
  <name>move_base_simple</name>
  <version>1.0.0</version>
  <description>The move_base_simple package</description>
  <author>Gonçalo Cabrita</author>
  <maintainer email="denise.ratasich@gmx.at">Denise Ratasich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>angles</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
</package>