<?xml version="1.0"?>
<package>
  <name>wanderer</name>
  <version>0.1.0</version>
  <description>
    wanderer - send random commands to move around
  </description>

  <maintainer email="denise@vmars.tuwien.ac.at">Denise Ratasich</maintainer>
  <license>MIT</license>
  <author email="denise@vmars.tuwien.ac.at">Denise Ratasich</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
</package>
