<?xml version="1.0"?>
<package>
  <name>kxtf9</name>
  <version>0.9.0</version>
  <description>Driver for KXTF9 (accelerometer)</description>

  <maintainer email="e0826389@student.tuwien.ac.at">Denise Ratasich</maintainer>
  <license>MIT</license>
  <author email="e0826389@student.tuwien.ac.at">Denise Ratasich</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
</package>
